--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+/* || Colores seleccionados*/
 .color-1 {
   color: #f8f6f1;
 }
@@ -11,115 +12,290 @@
   color: #66b2a0;
 }
 .color-5 {
-  color: #4e796b;
+  color: #2d473e;
 }
-
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 /* CSS Variables */
 :root {
   --color-1: #f8f6f1;
   --color-2: #e1eae5;
   --color-3: #a7d7b8;
   --color-4: #66b2a0;
-  --color-5: #4e796b;
+  --color-5: #2d473e;
+}
+body {
+  background-color: var(--color-1);
+}
+div {
+  font-size: 18px;
+}
+header {
+  background-color: var(--color-1);
+}
+.tittle-app {
+  font-family: Arial;
+  font-size: 60px;
+  font-weight: bold;
+  color: var(--color-3);
+  text-align: center;
+  margin-bottom: 0px;
+}
+.action-app {
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--color-4);
+  text-align: center;
+  margin-bottom: 60px;
 }
 
-h1{
-  font-family: "Sofia Sans Condensed", sans-serif;
-  font-weight: 400;
-  font-size: 3.2em;
-  line-height: 1.1;
-  color:#213547;;
+.avisos {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 30px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 10px 10px;
+  position: relative;
+}
 
+@keyframes pulso {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.02);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
-h2 {
-  font-family: "Quicksand", sans-serif;
-  font-size: 1.2em;
-  line-height: 1.5;
-  color:#213547;
-}
-main {
-  display:flex;
+
+.regar-hoy {
+  background-color: var(--color-4);
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  font-family: "Quicksand", sans-serif;
-  font-weight: 400;
+  color: var(--color-2);
+  height: 200px;
+  border-radius: 10px;
+  align-items: center;
+  animation: pulso 2s infinite;
+}
+
+.nombre-planta {
+  display: flex;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--color-2);
+}
+
+.area-emoji {
+  padding-top: 0;
+}
+
+.div-btn-condicional {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.btn-condicional {
+  margin-top: 15px;
+  background-color: var(--color-4);
+  color: var(--color-2);
+  border: 1px solid var(--color-2);
+  padding: 8px 10px 8px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-condicional:hover {
+  background-color: var(--color-2);
   color: var(--color-5);
 }
 
-section.avisos {
-  color:var(--color-5);
-}
-div.regar-hoy {
-color: var(--color-4);
-}
-.modal{
-  display: none;
-  position: fixed; /* Para que se superponga al resto */
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.4); /* Fondo semi-transparente */
-  justify-content: center;
-  align-items: center;
-  z-index: 1000; /* Encima de todo */
-}
-.modal.activa{
-  display: flex; /* O block, según lo que necesites */
-  visibility: visible;
+.formulario, .busqueda-form {
+  border: none;
+  box-shadow: 2px 2px 10px var(--color-4);
+  background-color: var(--color-1);
+  border-radius: 5px;
+  margin: auto;
+  width: 600px;
+  height: 300px;
+  padding-bottom: 20px;
+  
 }
 
-#formularioModal {
-  color: #1a1a1a;
-  background: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+.busqueda-form {
+  height: 200px;
 }
-#span-slider {
-  margin-left: 10px;
+.agregar {
+  margin-top: 100px;
+  padding-top: 10px;
+  font-size: 20px;
+  color: var(--color-4);
+  text-align: center;
+}
+
+fieldset {
+  border: none;
+}
+
+.nombre-form,
+.frecuencia-form,
+.fecha-form,
+.flores-form, .busqueda-nombre, .busqueda-id, .frecuencia-busqueda{
+  color: var(--color-4);
+  font-weight: bold;
+  padding: 8px 30px 8px 40px;
+}
+
+input,
+select {
+  background-color: var(--color-1);
+  border: 1px solid var(--color-3);
+  border-radius: 2px;
+  height: 18px;
+}
+#frecuencia {
+  width: 40px;
+}
+
+#fecha,
+#flor {
+  height: 22px;
+  color: grey;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid var(--color-4);
+}
+.btn-form-sub {
+  margin: 8px 45px 10px;
+  text-align: center;
+}
+.btn-sub {
+  padding: 8px 10px;
+  margin-bottom: 8px;
+  border: 1px solid var(--color-4);
+  border-radius: 4px;
+  color: var(--color-4);
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn-sub:hover {
+  color: white;
+  background-color: var(--color-4);
+  border: 1px solid var(--color-5);
+}
+
+label {
+  margin-left: 30px;
+}
+.coleccion {
+   margin: 50px 15px;
+  
+}
+
+.listado, .biblio {
+  color: var(--color-4);
+  font-size: 20px;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+
+}
+
+#plantas-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  max-width: calc(340px * 3 + 40px); /*3 columnas + algo de gap*/
+  margin: 0 auto;
+  gap: 20px;
+}
+
+.tarjeta-planta {
+  display: flex;
+  width: 340px;
+  height: 200px;
+  box-shadow: 0px 2px 10px var(--color-4);
+  justify-content: space-between;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-color: var(--color-4);
+  opacity: 0.7;
+}
+
+.columna-izda {
+  padding-left: 18px;
+  font-size: 16px;
+}
+.titulo-coleccion {
+  color: var(--color-5);
+  font-weight: bold;
+}
+.ultimo-coleccion,
+.regar-coleccion,
+.proximo-coleccion {
+  color: var(--color-2);
+  font-size: 16px;
+  font-weight: bold;
+}
+.columna-dcha {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.img-coleccion {
+  margin-top: 15px;
+  margin-bottom: 30px;
+ 
+}
+.btn-eliminar-coleccion {
+  border: 1px solid var(--color-4);
+  border-radius: 4px;
+  color: var(--color-4);
+  font-weight: bold;
+  font-size: 16px;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+.btn-eliminar-coleccion:hover {
+ background-color: var(--color-5);
+ color: white;
+ border: 1px solid white;
+}
+img {
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
+  border-radius: 50px;
+  border: none;
+
+  margin-top: 5px;
+}
+
+legend {
+  color: var(--color-5);
+  font-size: 18px;
+  margin-top: 20px;
+  margin-left: 38px;
   font-weight: bold;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.slider {
+  background-color: var(--color-3);
+  
 }
-
-button.regar-hoy{
-  color: navy;
-}
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  color: white;
-  background-color: var(--color-4);
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: var(--color-1);
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+@media (max-width: 600px) {
+  .avisos {
+    grid-template-columns: 1fr;
   }
 }
